# marketplace-ai

./: .dev-pids  .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  agentic-repo-quality-audit.md  agentic-repo-quality-map.skill  agentic-repo-quality-scaffold.md  agentic-repo-quality-sync.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  mise.toml  noise-to-signal-guide.md  package-lock.json  package.json  skillhub-design.md  skillhub-diagrams.md  skillhub-technical-guide.md  skills-marketplace-v4.jsx  tsconfig.base.json  workshop-2-tts-script.txt
apps/api/: Dockerfile  pyproject.toml
apps/api/skillhub/: __init__.py  config.py  dependencies.py  main.py  worker.py
apps/api/skillhub/routers/: admin.py  auth.py  exports.py  flags.py  review_queue.py  skills.py  social.py  submissions.py
apps/api/skillhub/schemas/: __init__.py  admin.py  analytics.py  flags.py  review_queue.py  skill.py  social.py  submission.py  user.py
apps/api/skillhub_flask/: app.py  auth.py  config.py  db.py  tracing.py  validation.py
apps/api/tests/: conftest.py  test_admin.py  test_admin_blueprint.py  test_analytics_blueprint.py  test_app_smoke.py  test_auth.py  test_auth_blueprint.py  test_auth_middleware.py  test_auth_multi_identity.py  test_cache.py  test_dependencies.py  test_division_enforcement.py  test_empty_body_returns_422.py  test_exports_blueprint.py  test_feedback_blueprint.py  test_feedback_service_coverage.py  test_fix_social_users_router.py  test_flags.py  test_flags_audit.py  test_flags_blueprint.py  test_health.py  test_llm_judge.py  test_main.py  test_preview_scan.py  test_review_queue_blueprint.py  test_review_queue_service_coverage.py  test_reviews_router.py  test_reviews_service.py  test_reviews_service_coverage.py  test_revision_endpoints.py  test_revision_service.py  test_roadmap_blueprint.py  test_roadmap_service.py  test_roadmap_service_coverage.py  test_security_migration_gate.py  test_seed_data_integrity.py  test_skill_schemas.py  test_skills_blueprint.py  test_skills_router.py  test_skills_service.py  (+17 more)
apps/fast-api/: Dockerfile  pyproject.toml
apps/fast-api/skillhub/: cache.py  main.py  tracing.py
apps/fast-api/tests/: conftest.py  test_admin_users_submissions.py  test_analytics.py  test_exports.py  test_feedback_service.py  test_flags_comprehensive.py  test_health.py  test_regression_fixes.py  test_review_queue.py  test_reviews_comprehensive.py  test_reviews_service.py  test_security_migration_gate.py  test_seed_data_integrity.py  test_skills_browse_comprehensive.py  test_skills_router.py  test_skills_service.py  test_social_comprehensive.py  test_submissions_router.py  test_users_router.py
apps/mcp-server/: Dockerfile  pyproject.toml
apps/mcp-server/skillhub_mcp/: api_client.py  config.py  server.py  tracing.py
apps/mcp-server/tests/: conftest.py  test_fork.py  test_get_skill.py  test_install.py  test_list_installed.py  test_regression_fixes.py  test_search.py  test_search_and_patch.py  test_server.py  test_status.py  test_submit.py  test_tools_comprehensive.py  test_update.py  test_version_response_contract.py
libs/db/: alembic.ini  pyproject.toml
libs/db/migrations/: env.py
libs/db/scripts/: seed.py  seed_data.py
libs/db/skillhub_db/: __init__.py  base.py  session.py
libs/db/tests/: conftest.py  test_identity_models.py  test_platform_models.py  test_seed.py  test_session.py  test_skill_models.py  test_social_models.py  test_submission_models.py
libs/python-common/: pyproject.toml
(+415 files in other folders)
